# flutter_doclayout_kit

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  PERMISSIONS.md  README.md  download_model.sh  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/robert008/flutter_doclayout_kit_example/: MainActivity.kt
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/pages/: camera_scan_page.dart  form_editor_page.dart  html_preview_page.dart  layout_result_page.dart
ios/: download_library.sh  flutter_doclayout_kit.podspec
ios/Classes/: DocLayoutKitPlugin.h  DocLayoutKitPlugin.m
lib/: flutter_doclayout_kit.dart  flutter_doclayout_kit_bindings_generated.dart
lib/src/: doc_layout_service.dart  form_editor_widget.dart  form_html_generator.dart  html_generator.dart  models.dart
src/: CMakeLists.txt  native_lib.cpp
src/detect/: doc_detector.cpp  utils.cpp
src/detect/include/: utils.h
